# httpbin

./: README.md  pyproject.toml
.github/workflows/: push.yml  static.yml
httpbin/: __init__.py  client.py
tests/: test_client.py
