[tool.poetry]
name = "httpbin"
version = "0.0.1"
description = "A model-based python client for httpbin.org"
authors = ["Jakob Kammerer <jakob.kammerer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.9.1"
httpx = "^0.23.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.3.0"
flake8 = "^4.0.1"
mypy = "^0.961"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
